# skeez-travel-api

./: .gitignore  Caddyfile  app.yaml  config.py  main.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  start.sh  tailwind.config.js
.github/workflows/: deploy.yml
apps/admin/: __init__.py  signals.py  tasks.py  urls.py  views.py
apps/admin/templates/: dashboard.html  new-trip-response.html  trip-board.html
apps/trip/: __init__.py  api.py  db.py  template_loader.py  urls.py  views.py
apps/trip/models/: trip.py
apps/trip/utils/: slotlist.py
orb/: __init__.py  config.py  db.py  main.py  models.py  registry.py  urls.py  views.py
orb/apps/account/: models.py
orb/apps/auth/: models.py
orb/apps/estate/: __init__.py  urls.py  views.py
orb/assets/css/: input.css  output.css
orb/assets/scripts/: base.js  index.js  post-card.js
orb/services/auth/: urls.py  views.py
orb/services/estate/: __init__.py  urls.py
orb/services/media/: models.py  urls.py  views.py
orb/services/social/: __init__.py  models.py
orb/templates/: base.html  home.html  index.html  thread.html
orb/templates/components/: create-post-template.html  create-post.html  nav.html  post-card-template.html  post-template.html  post.html  product.html  status.html  tabs.html
orb/utils/: db.py  env_to_toml.py  keys.py  registry.py  setup_db.py  setup_templating.py  setup_urls.py  templating.py
skrid-web/: .cta.json  biome.json  index.html  package-lock.json  package.json  vitest.config.ts
skrid-web/public/: manifest.json
skrid-web/src/: auth.tsx  event.tsx  main.tsx  routeTree.gen.ts  trips.tsx
skrid-web/src/components/: AuthBtn.tsx  CreateTrip.tsx  Destinations.tsx  Header.tsx  History.tsx  Reservations.tsx  SignInForm.tsx  TripCard.tsx
skrid-web/src/routes/: -trips.tsx  __root.tsx  _app.account.tsx  (+9 more)
src/: main.py  urls.py  views.py
src/blueprints/: __init__.py  account.py
src/certificates/: private_key.pem  public_key.pem
src/middlewares/: __init__.py  session.py
src/models/: account.py  admin.py  post.py  sse.py  ticket.py  token.py  trip.py
src/routes/: __init__.py
src/services/: __init__.py  account.py  admin.py  celery_app.py  keys.py  magiclink.py  mail.py  notification.py  password.py  pubsub.py  ticket.py  token.py  trip.py
src/templates/: admin.html  auth.html  base.html  dashboard.html  index.html  market.html  signin.html  signup.html  thread.html  trip.html  trips.html
src/utils/: db.py  keys.py  registry.py  slotlist.py  templating.py
src/views/: __init__.py
(+53 files in other folders)
