[project]
name = "skrid"
version = "0.1.0"
description = "Skeez travel app"
readme = "README.md"
authors = [
    { name = "Max Prosper", email = "maxprosper22@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "sanic>=25",
    "toml>=0.10.2,<0.11.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "asyncpg==0.30.0",
    "jinja2>=3.1.4,<4.0.0",
    "sanic-ext>=23.12.0,<24.0.0",
    "dynaconf>=3.2.10",
    "pydantic>=2.11.3",
    "email-validator>=2.2.0",
    "jwt>=1.3.1",
    "returns>=0.25.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
