[project]
name = "skrid"
version = "0.1.0"
description = "Skeez travel app"
readme = "README.md"
authors = [
    { name = "Max Prosper", email = "maxprosper22@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "sanic[ext]>=25",
    "toml>=0.10.2,<0.11.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "asyncpg==0.30.0",
    "jinja2>=3.1.4,<4.0.0",
    "sanic-ext>=23.12.0,<24.0.0",
    "dynaconf>=3.2.10",
    "pydantic>=2.11.3",
    "email-validator>=2.2.0",
    "jwt>=1.3.1",
    "returns>=0.25.0",
    "pydantic-extra-types>=2.10.5",
    "phonenumbers>=9.0.7",
    "aiosmtplib>=4.0.1",
    "bcrypt>=4.3.0",
    "passlib>=1.7.4",
    "sanic-cors>=2.2.0",
    "apscheduler>=3.11.0",
    "httpx>=0.28.1",
    "aiohttp[speedups]>=3.12.15",
    "itsdangerous",
    "pyotp",
    "mailbridge>=2.0.0",
    "celery[redis]>=5.5.3",
    "pyjwt>=2.10.1",
    "supabase>=2.16.0",
    "valkey>=6.1.1",
    "sqlalchemy>=2.0.44",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package=false
